Fixed fault where pop up is behind markers

--- a/style.css
+++ b/style.css
@@ -61,6 +61,7 @@ body { margin: 0; padding: 0; }
    
   .mapboxgl-popup {
   max-width: 200px;
+  z-index: 10;
   }
 
 .open-button {
